--- a/index.html
+++ b/index.html
@@ -19,4 +19,24 @@
   <h2 id="info">ここが下部の情報です</h2>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Flexboxの基本</title>
+  <link rel="stylesheet" href="style.css"> <!-- CSSファイルを読み込む -->
+</head>
+<body>
+
+  <h1>Flexbox レイアウト例</h1>
+
+  <!-- Flexboxでレイアウトするコンテナ -->
+  <div class="container">
+    <div class="item">ボックス1</div>
+    <div class="item">ボックス2</div>
+    <div class="item">ボックス3</div>
+  </div>
+
+</body>
+</html>
 
